src - MTDEV2/objects/MT_MediaBroadcastData__c.object
<CustomObject>
    <fields>
        <fullName>MT_BMV__c</fullName>
        <label>BMV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BroadcastType__c</fullName>
        <description>Populated via workflow, copies the ProSa order type, but allows filtering on roll ups.</description>
        <label>Broadcast Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_LastImportDate__c</fullName>
        <label>Last Import Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MN3__c</fullName>
        <label>MN3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MonthlyPlan_ref__c</fullName>
        <label>Monthly Plan</label>
        <referenceTo>MT_MediaBuildingBlockMonthlyPlan__c</referenceTo>
        <relationshipLabel>Media Broadcast Data</relationshipLabel>
        <relationshipName>Media_Broadcasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>MT_ProSaOrder_Type__c</fullName>
        <description>Fetches the record type of a ProSa Order</description>
        <formula>MT_ProSaOrder_ref__r.RecordType.Name</formula>
        <label>ProSa Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_ProSaOrder_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ProSa Order</label>
        <referenceTo>MT_ProSaOrder__c</referenceTo>
        <relationshipLabel>Media Broadcast Data</relationshipLabel>
        <relationshipName>Media_Broadcasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Timeslot__c</fullName>
        <label>Timeslot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_TvSenderName__c</fullName>
        <label>TV Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_TvSenderNumber__c</fullName>
        <label>TV Sender Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Broadcast Data</label>
    <nameField>
        <displayFormat>MBD-{00000000}</displayFormat>
        <label>Media Broadcast Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Broadcast Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>